Initial commit from workspace

--- a/dmcostumisation.html
+++ b/dmcostumisation.html
@@ -79,7 +79,7 @@
 </head>
 <body>
   <header>
-    <div class="wrap"><strong>DMstars</strong></div>
+    <div class="wrap"><strong>DM⭐⭐⭐</strong></div>
   </header>
 
   <nav>
